初始化亚洲社会仿真学会

--- a/themes/suka/layout/_pages/application.ejs
+++ b/themes/suka/layout/_pages/application.ejs
@@ -259,7 +259,7 @@
                 return;
             }
 
-            const Forms = window.AV.Object.extend("involvedMembers");
+            const Forms = window.AV.Object.extend("computationalsocialscienceInvolvedMembers");
             const formObject = new Forms();
             formObject.save(params).then((result) => {
                 formItem.reset();
