--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -4,26 +4,56 @@
                         <span class="goto_logo">
                                 <a href="/"><img class="h_logo goto_logo" alt="<%= config.title%>" src="https://wp-img.daozhao.com.cn/thefoodsecurity/logo/big_logo.png?t=<%= config.buildTs%>" ></a>
                         </span>
-                        <div class="h_alliance_area">
-                                <span class="goto_logo"><a href="http://www.hzau.edu.cn/" target="_blank"><img class="h_alliance_logo" src="https://wp-img.daozhao.com.cn/thefoodsecurity/alliance/HZAU.png?t=<%= config.buildTs%>" ></a></span>
-                                <span class="goto_logo"><a href="https://www.ifpri.org/" target="_blank"><img class="h_alliance_logo" src="https://wp-img.daozhao.com.cn/thefoodsecurity/alliance/IFPRI.png?t=<%= config.buildTs%>" ></a></span>
-                                <span class="goto_logo"><a href="https://www.cimmyt.org/" target="_blank"><img class="h_alliance_logo" src="https://wp-img.daozhao.com.cn/thefoodsecurity/alliance/CIMMYT.jpg?t=<%= config.buildTs%>" ></a></span>
-                                <span class="goto_logo"><a href="https://www.iamo.de/en/" target="_blank"><img class="h_alliance_logo" src="https://wp-img.daozhao.com.cn/thefoodsecurity/alliance/IAMO.png?t=<%= config.buildTs%>" ></a></span>
-                        </div>
                 </div>
                 <div class="h_nav_tree">
                         <ul class="first">
-                                <li><a href="/">Home</a>
+                                <li>
+                                        <a href="/">
+                                                <div>
+                                                        <div class="enName">Home</div>
+                                                        <div class="cnName">首页</div>
+                                                </div>
+                                        </a>
                                 </li>
-                                <li><a href="/about/">About Us</a>
+                                <li>
+                                        <a href="/about/">
+                                                <div>
+                                                        <div class="enName">About Us</div>
+                                                        <div class="cnName">关于我们</div>
+                                                </div>
+                                        </a>
                                 </li>
-                                <li><a href="/events/">Events</a>
+                                <li>
+                                        <a href="/news/">
+                                                <div>
+                                                        <div class="enName">News</div>
+                                                        <div class="cnName">新闻动态</div>
+                                                </div>
+                                        </a>
                                 </li>
-                                <li><a href="/initiative/">Initiative</a>
+                                <li>
+                                        <a href="/<%= config.category_dir%>/events/">
+                                                <div>
+                                                        <div class="enName">Events</div>
+                                                        <div class="cnName">学术活动</div>
+                                                </div>
+                                        </a>
                                 </li>
-                                <li><a href="/<%= config.category_dir%>/posts/">Blogs</a>
+                                <li>
+                                        <a href="/<%= config.category_dir%>/training/">
+                                                <div>
+                                                        <div class="enName">Training</div>
+                                                        <div class="cnName">方法培训</div>
+                                                </div>
+                                        </a>
                                 </li>
-                                <li><a href="/members/">Get Involved</a>
+                                <li>
+                                        <a href="/join/">
+                                                <div>
+                                                        <div class="enName">Get Involved</div>
+                                                        <div class="cnName">加入我们</div>
+                                                </div>
+                                        </a>
                                 </li>
                         </ul>
                 </div>
