--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -2,61 +2,63 @@
         <div class="h_nav-section">
                 <div class="h_nav_header">
                         <span class="goto_logo">
-                                <a href="/"><img class="h_logo goto_logo" alt="<%= config.title%>" src="https://wp-img.daozhao.com.cn/thefoodsecurity/logo/big_logo.png?t=<%= config.buildTs%>" ></a>
+                                <a href="/"><img class="h_logo goto_logo" alt="<%= config.title%>" src="https://wp-img.daozhao.com.cn/computationalsocialscience/logo.png?t=<%= config.buildTs%>" ></a>
                         </span>
                 </div>
-                <div class="h_nav_tree">
-                        <ul class="first">
-                                <li>
-                                        <a href="/">
-                                                <div>
-                                                        <div class="enName">Home</div>
-                                                        <div class="cnName">首页</div>
-                                                </div>
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="/about/">
-                                                <div>
-                                                        <div class="enName">About Us</div>
-                                                        <div class="cnName">关于我们</div>
-                                                </div>
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="/news/">
-                                                <div>
-                                                        <div class="enName">News</div>
-                                                        <div class="cnName">新闻动态</div>
-                                                </div>
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="/<%= config.category_dir%>/events/">
-                                                <div>
-                                                        <div class="enName">Events</div>
-                                                        <div class="cnName">学术活动</div>
-                                                </div>
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="/<%= config.category_dir%>/training/">
-                                                <div>
-                                                        <div class="enName">Training</div>
-                                                        <div class="cnName">方法培训</div>
-                                                </div>
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="/join/">
-                                                <div>
-                                                        <div class="enName">Get Involved</div>
-                                                        <div class="cnName">加入我们</div>
-                                                </div>
-                                        </a>
-                                </li>
-                        </ul>
-                </div>
+        </div>
+        <div class="h_nav_tree_wrapper">
+        <div class="h_nav-section h_nav_tree">
+                <ul class="first">
+                        <li>
+                                <a href="/">
+                                        <div>
+                                                <div class="enName">Home</div>
+                                                <div class="cnName">首页</div>
+                                        </div>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="/about/">
+                                        <div>
+                                                <div class="enName">About Us</div>
+                                                <div class="cnName">关于我们</div>
+                                        </div>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="/news/">
+                                        <div>
+                                                <div class="enName">News</div>
+                                                <div class="cnName">新闻动态</div>
+                                        </div>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="/<%= config.category_dir%>/events/">
+                                        <div>
+                                                <div class="enName">Events</div>
+                                                <div class="cnName">学术活动</div>
+                                        </div>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="/<%= config.category_dir%>/training/">
+                                        <div>
+                                                <div class="enName">Training</div>
+                                                <div class="cnName">方法培训</div>
+                                        </div>
+                                </a>
+                        </li>
+                        <li>
+                                <a href="/join/">
+                                        <div>
+                                                <div class="enName">Get Involved</div>
+                                                <div class="cnName">加入我们</div>
+                                        </div>
+                                </a>
+                        </li>
+                </ul>
+        </div>
         </div>
 </nav>
 <script>
