[style]调整swiper-slide宽度

--- a/themes/suka/src/css/gallery.css
+++ b/themes/suka/src/css/gallery.css
@@ -65,7 +65,7 @@
 @media only screen and (max-width: 1068px) {
 	.swiper-slide {
 		padding:0 calc((100vw - 576px) * .15);
-		width: 576px;
+		/*width: 576px;*/
 	}
 	.gallery-item-desc {
 		padding-top: 41px;
@@ -75,7 +75,7 @@
 	.swiper-slide {
 		transform: scale(.9);
 		padding: 0;
-		width: 85vw;
+		/*width: 85vw;*/
 		margin: 0 0;
 		min-width: 272px;
 	}
