--- a/themes/suka/layout/_partial/post-entry-content.ejs
+++ b/themes/suka/layout/_partial/post-entry-content.ejs
@@ -6,7 +6,7 @@
     <% if (post.excerpt) {%>
         <%- strip_html(post.excerpt) %>
     <% } else { %>
-        <%- strip_html(truncate(post.content, { length: theme.post.entry_excerpt })) %>
+        <%- strip_html(truncate(content_excerpt(post.content), { length: theme.post.entry_excerpt })) %>
     <% } %><a href="<%= url_for(post.path) %>"><%= __('post.continue') %></a>
 </p>
 
