让training支持按year切换

--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -42,7 +42,7 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="/<%= config.category_dir%>/training/">
+                                <a href="/<%= config.category_dir%>/training/2021/">
                                         <div>
                                                 <div class="enName">Training</div>
                                                 <div class="cnName">方法培训</div>
