--- a/themes/suka/src/css/style.css
+++ b/themes/suka/src/css/style.css
@@ -337,6 +337,18 @@ header .divider {
 .post-stream-container {
     width: 100%;
 }
+.post-stream-container .category_year-a {
+    display: inline-block;
+    padding: 0 15px;
+    margin-bottom: 5px;
+    background: #e5e5e5;
+    font-size: 15px;
+    line-height: 30px;
+}
+.post-stream-container .category_year-a.active,.post-stream-container .category_year-a:hover {
+    background: #dfb956;
+    color: #fff;
+}
 
 .pagination .page-item i {
     vertical-align: -7.5% !important;
