--- a/themes/suka/layout/_pages/category.ejs
+++ b/themes/suka/layout/_pages/category.ejs
@@ -7,6 +7,21 @@
             <%}%>
             <!-- # Post List # -->
             <div class="post-stream-container">
+                <% if (/\d{4}/.test(page.category)) { %>
+                    <div class="year_wrapper">
+                        <%let categoryParent='';
+                            page.posts.sort('date', -1).each(function(post){
+                                if(post._categoryParent) {
+                                    categoryParent = post._categoryParent;
+                                }
+                            })
+                        %>
+                        <%let yearList=['2021', '2020', '2019'];
+                        yearList.forEach(function (year) {%>
+                            <a href="<%- url_for('/' + config.category_dir + '/' + categoryParent + '/' + year + '/')%>" class="category_year-a <%- year === page.category ? 'active' : ''%>"><%- year%></a>
+                        <%})%>
+                    </div>
+                <% } %>
                 <% page.posts.sort('date', -1).each(function(post){ %>
                     <div class="grid-item">
                         <%- partial('_partial/post-entry', { post: post, index: true, pin: false }) %>
