--- a/themes/suka/src/css/style.css
+++ b/themes/suka/src/css/style.css
@@ -378,7 +378,7 @@ header .divider {
 .post-entry .post-thumbnail {
     width: 100%;
     height: 100%;
-    min-height: 8rem;
+    min-height: 4rem;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -390,7 +390,7 @@ header .divider {
         order: -1;
     }
     .post-entry .post-thumbnail {
-        min-height: 6.5rem;
+        min-height: 3rem;
     }
 }
 
@@ -417,6 +417,9 @@ header .divider {
 .post-entry .card-body {
     padding-top: .6rem;
     font-size: .75rem;
+}
+.post-entry .card-body.flex {
+    display: flex;
 }
 
 .post-entry .text-gray a {
