[fix]events列表默认展示最新年份2022

--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -34,7 +34,7 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="/<%= config.category_dir%>/events/">
+                                <a href="/<%= config.category_dir%>/events/2022/">
                                         <div>
                                                 <div class="enName">Events</div>
                                                 <div class="cnName">学术活动</div>
