--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -18,14 +18,6 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="/about/">
-                                        <div>
-                                                <div class="enName">About Us</div>
-                                                <div class="cnName">关于我们</div>
-                                        </div>
-                                </a>
-                        </li>
-                        <li>
                                 <a href="/news/">
                                         <div>
                                                 <div class="enName">News</div>
@@ -34,7 +26,7 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="/<%= config.category_dir%>/events/2022/">
+                                <a href="/<%= config.category_dir%>/events/">
                                         <div>
                                                 <div class="enName">Events</div>
                                                 <div class="cnName">学术活动</div>
@@ -42,7 +34,7 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="/<%= config.category_dir%>/training/2021/">
+                                <a href="/<%= config.category_dir%>/training/">
                                         <div>
                                                 <div class="enName">Training</div>
                                                 <div class="cnName">方法培训</div>
