--- a/themes/suka/layout/_pages/categoryByYears.ejs
+++ b/themes/suka/layout/_pages/categoryByYears.ejs
@@ -25,23 +25,38 @@
                 <div class="post-stream_intro">
                     <%- introConf%>
                 </div>
+                <% } %>
+
                 <%
-                }
-                let conf = theme['_' + key + 'YearList'];
-                if (conf) {
-                    let yearList = conf.split(',');
-                    if (yearList) {
+                let yearList = [];
+                let postsList = page.posts.sort('date', -1).filter(function (post){
+                    let categoryKey = ''
+                    let categoryYear = ''
+                    post.categories.each(function (it, index) {
+                        if (key === it.name) {
+                            categoryKey = index
+                        } else if(/^\d{4}$/.test(it.name)){
+                            categoryYear = it.name
+                        }
+                    })
+                    if (categoryKey && categoryYear && !yearList.includes(categoryYear)) {
+                        yearList.push(categoryYear)
+                    }
+                    return !!categoryKey;
+                })
+                %>
+
+                <% if (yearList.length > 0) { %>
+                    <div class="year_wrapper">
+                        <%
                         yearList.forEach(function (year) {%>
                             <a href="<%- url_for('/' + config.category_dir + '/' + categoryParent + '/' + year + '/')%>" class="category_year-a <%- year === page.category ? 'active' : ''%>"><%- year%></a>
-                        <%})
-                    }
-                }
-                %>
-                <% page.posts.filter(function (post){
-                  return post.categories.some(function (it) {
-                      return key === it.name;
-                  })
-                }).sort('date', -1).each(function(post){%>
+                        <% }) %>
+                        %>
+                    </div>
+                <% } %>
+                <div><%- page.posts.length%>len:<%- postsList.length%></div>
+                <%postsList.each(function(post){%>
                     <div class="grid-item">
                         <%- partial('_partial/post-entry', { post: post, index: true, pin: false }) %>
                     </div>
