--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -26,7 +26,7 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="/<%= config.category_dir%>/events/">
+                                <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/events/">
                                         <div>
                                                 <div class="enName">Events</div>
                                                 <div class="cnName">学术活动</div>
@@ -34,7 +34,7 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="/<%= config.category_dir%>/training/">
+                                <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/training/">
                                         <div>
                                                 <div class="enName">Training</div>
                                                 <div class="cnName">方法培训</div>
