--- a/themes/suka/layout/category.ejs
+++ b/themes/suka/layout/category.ejs
@@ -1,8 +1,6 @@
 <% if (is_category()) {
-    if (new RegExp(theme._categoryByYears || '').test(page.category)) { %>
-        <%- partial('_pages/categoryByYears.ejs') %>
-    <% } else if (new RegExp(theme._categoryByGrids || '').test(page.category)) { %>
-        <%- partial('_pages/categoryByGrids.ejs') %>
+    if (new RegExp(theme._categorySpecial || '').test(page.category)) { %>
+        <%- partial('_pages/categorySpecial.ejs') %>
     <% } else {%>
         <%- partial('_pages/category.ejs') %>
     <% } %>
