--- a/themes/suka/src/css/post.css
+++ b/themes/suka/src/css/post.css
@@ -6,26 +6,37 @@
     margin-top: 0;
     margin-bottom: 16px;
 }
+.post_flex_center {
+    display: flex;
+    align-items: center;
+}
+.post_flex_center_horizontal {
+    display: flex;
+    justify-content: center;
+}
 .post_flex_center_center {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
-
 .post_flex_center_center + .post_flex_center_center {
     margin-top: 8px;
 }
+
+.post_flex_1 {
+    flex: 1;
+}
+.post_flex_2 {
+    flex: 2;
+}
+
 /* 元素直接有间距 */
 .post_block-item {
     flex: 1;
 }
 .post_block-item +.post_block-item {
     margin-left: 30px;
-}
-.post_flex_center {
-    display: flex;
-    align-items: center;
 }
 
 .p_bold {
