--- a/themes/suka/layout/_pages/categorySpecial.ejs
+++ b/themes/suka/layout/_pages/categorySpecial.ejs
@@ -60,18 +60,27 @@
                 <%
                 let gridConf = theme['_grid_' + page.category + '_' + key];
                 if (gridConf) {
-                    let _categoryByGridsMaxIndex = gridConf - 1
-                    postsList.each(function(post, index){
+                    let _categoryByGridsMaxIndex = gridConf - 0;
+                    let gridBannerConf = theme['_grid_banner_' + page.category + '_' + key] || 0;
+                        postsList.each(function(post, index){
                         if (index <= _categoryByGridsMaxIndex) {
-                        if(index%2 === 0) { %>
-                        <div class="grid-item_column_box">
-                            <%}%>
-                            <div class="grid-item grid-item-column <%- index%2 === 0 ? '' : 'odd'%>">
-                                <%- partial('_partial/post-entry', { post: post, index: true, pin: false }) %>
+                            let compareIndex = index - gridBannerConf;
+
+                            if (index === 0) { %>
+                            <div class="grid-item_column_box">
+                                <%- partial('_partial/post-entry-banner', { post: post, index: true, pin: false }) %>
                             </div>
-                            <% if (index%2 !== 0 || index === _categoryByGridsMaxIndex) { %>
-                        </div>
-                        <%}
+                            <%} else {
+                                if(compareIndex%2 === 0) { %>
+                                <div class="grid-item_column_box">
+                                    <%}%>
+                                    <div class="grid-item grid-item-column <%- compareIndex%2 === 0 ? '' : 'odd'%>">
+                                        <%- partial('_partial/post-entry', { post: post, index: true, pin: false }) %>
+                                    </div>
+                                    <% if (compareIndex%2 !== 0 || index === _categoryByGridsMaxIndex) { %>
+                                </div>
+                                <%}
+                            }
 
                         } else { %>
                             <div class="grid-item">
