--- a/themes/suka/layout/_pages/categorySpecial.ejs
+++ b/themes/suka/layout/_pages/categorySpecial.ejs
@@ -24,7 +24,7 @@
                         post.categories.each(function (it, index) {
                             if (key === it.name) {
                                 categoryKey = index
-                            } else if(/^\d{4}$/.test(it.name)){
+                            } else if(/^\d{4}$/.test(it.name) && !post._private){
                                 categoryYear = it.name
                             }
                         })
@@ -67,7 +67,7 @@
                             let compareIndex = index - gridBannerConf;
 
                             if (index === 0) { %>
-                            <div class="grid-item_column_box">
+                            <div class="grid-item_banner_box">
                                 <%- partial('_partial/post-entry-banner', { post: post, index: true, pin: false }) %>
                             </div>
                             <%} else {
