[fix]调整标题名称

--- a/themes/suka/layout/_pages/categorySpecial.ejs
+++ b/themes/suka/layout/_pages/categorySpecial.ejs
@@ -54,7 +54,7 @@
                         <%- title%>
                     </div>
                     <%
-                    let introConf = theme['_' + key + 'Intro'];
+                    let introConf = theme['_' + key + '_intro'];
                     if (introConf) { %>
                         <div class="post-stream_intro">
                             <%- introConf%>
