[fix]加入news、调整收益轮播图

--- a/themes/suka/layout/_partial/index-nav.ejs
+++ b/themes/suka/layout/_partial/index-nav.ejs
@@ -18,7 +18,7 @@
                                 </a>
                         </li>
                         <li>
-                                <a href="/news/">
+                                <a href="<%= (config.category_dir ? ('/' + config.category_dir) : '')%>/news/">
                                         <div>
                                                 <div class="enName">News</div>
                                                 <div class="cnName">新闻动态</div>
